--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
 	  xmlns:h="http://xmlns.jcp.org/jsf/html"
 	  xmlns:f="http://xmlns.jcp.org/jsf/core"
 	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets" translate="no">
       
 <h:head>
 	<title>Esquadron</title>
@@ -18,10 +18,10 @@
 <h:body>
 	<aside>
 		<ul>
-			<li><a href="#inicio"><h:graphicImage library="img" name="/mounstro/verde.svg" alt=""/></a></li>
-			<li><a href="#seccion2"><h:graphicImage library="img" name="/mounstro/3ojos.svg" alt=""/></a></li>
-			<li><a href="#seccion3"><h:graphicImage library="img" name="/mounstro/monstruo.svg" alt=""/></a></li>
-			<li><a href="#seccion4"><h:graphicImage library="img" name="/mounstro/naranja.svg" alt=""/></a></li>
+			<li><a href="#inicio"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/verde.svg" alt=""/></a></li>
+			<li><a href="#seccion2"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt=""/></a></li>
+			<li><a href="#seccion3"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/monstruo.svg" alt=""/></a></li>
+			<li><a href="#seccion4"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/naranja.svg" alt=""/></a></li>
 		</ul>
 	</aside>
 	<div id="mobil-aside">
@@ -44,7 +44,7 @@
 						<li><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></li>
 					</ul>
 					<div>
-						<span><h:graphicImage library="img" name="/landing/squadron.svg"  alt=""/>squadron</span>
+						<span><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg"  alt=""/>squadron</span>
 						<span id="hamburguesa"><span/><span/><span/></span>
 						<!--                <input type="checkbox" id="hamburguesa">-->
 					</div>
@@ -53,10 +53,10 @@
 			<div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="/mounstro/who.svg" alt=""/><h:graphicImage library="img" name="/mounstro/whom.svg" alt=""/><h:graphicImage library="img" name="mounstro/whose.svg" alt=""/>
+						<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/who.svg" alt=""/><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whom.svg" alt=""/><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whose.svg" alt=""/>
 					</div>
 					<div class="aparece">
-						<h:graphicImage library="img" name="/landing/5.png" alt=""/>
+						<img  src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/5.png" alt=""/>
 					</div>
 				</div>
 				<div>
@@ -83,7 +83,7 @@
 			<div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="/landing/2.png" alt=""/>
+						<img  src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/2.png" alt=""/>
 					</div>
 					<div>
 						<h2 class="titulos-landing color-titulos">1000+ Online Activities</h2>
@@ -97,7 +97,7 @@
 				</div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="landing/3.png" alt=""/>
+						<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/3.png" alt=""/>
 					</div>
 					<div>
 						<h2 class="titulos-landing color-titulos">Online Homework</h2>
@@ -111,7 +111,7 @@
 				</div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="landing/4.png" alt=""/>
+						<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/4.png" alt=""/>
 					</div>
 					<div>
 						<h2 class="titulos-landing color-titulos">Games and Drills</h2>
@@ -128,7 +128,7 @@
 			<div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="landing/reportes.png" alt=""/>
+						<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/reportes.png" alt=""/>
 					</div>
 					<div>
 						<h2 class="titulos-landing color-titulos">Reporting Tools</h2>
@@ -142,7 +142,7 @@
 				</div>
 				<div>
 					<div>
-						<h:graphicImage library="img" name="landing/mapa-mental.png" alt=""/>
+						<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/mapa-mental.png" alt=""/>
 					</div>
 					<div>
 						<h2 class="titulos-landing color-titulos">Critical thinking Activities</h2>
@@ -160,7 +160,7 @@
 
 		<section class="secccion2-mobile">
 			<div>
-				<h:graphicImage library="img" name="landing/2.png" alt=""/>
+				<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/2.png" alt=""/>
 				<div>
 					<h2 class="titulos-landing color-titulos">1000+ Online Activities</h2>
 					<div class="titulo-linea">
@@ -172,7 +172,7 @@
 				</div>
 			</div>
 			<div>
-				<h:graphicImage library="img" name="landing/3.png" alt=""/>
+				<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/3.png" alt=""/>
 				<div>
 					<h2 class="titulos-landing color-titulos">Online Homework</h2>
 					<div class="titulo-linea">
@@ -184,7 +184,7 @@
 				</div>
 			</div>
 			<div>
-				<h:graphicImage library="img" name="landing/4.png" alt=""/>
+				<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/4.png" alt=""/>
 				<div>
 					<h2 class="titulos-landing color-titulos">Games and Drills</h2>
 					<div class="titulo-linea">
@@ -197,7 +197,7 @@
 				</div>
 			</div>
 			<div>
-				<h:graphicImage library="img" name="landing/reportes.png" alt=""/>
+				<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/reportes.png" alt=""/>
 				<div>
 					<h2 class="titulos-landing color-titulos">Reporting Tools</h2>
 					<div class="titulo-linea">
@@ -209,7 +209,7 @@
 				</div>
 			</div>
 			<div>
-				<h:graphicImage library="img" name="landing/mapa-mental.png" alt=""/>
+				<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/mapa-mental.png" alt=""/>
 				<div>
 					<h2 class="titulos-landing color-titulos">Critical thinking Activities</h2>
 					<div class="titulo-linea">
@@ -228,23 +228,23 @@
 					<div>
 						<div>
 							<input type="text" name="" placeholder="Nombre" maxlength="60"/>
-							<h:graphicImage library="img" name="/alumno/planetas/tierra.svg" alt=""/>
+							<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/tierra.svg" alt=""/>
 						</div>
 						<div>
 							<input type="text" name="" placeholder="Colegio" maxlength="60"/>
-							<h:graphicImage library="img" name="/alumno/planetas/planeta1.svg" alt=""/>
+							<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" alt=""/>
 						</div>
 						<div>
 							<input type="text" name="" placeholder="Cuidad" maxlength="60"/>
-							<h:graphicImage library="img" name="/alumno/planetas/planeta2.svg" alt=""/>
+							<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta2.svg" alt=""/>
 						</div>
 						<div>
 							<input type="email" name="" placeholder="Correo" maxlength="60"/>
-							<h:graphicImage library="img" name="alumno/planetas/planeta3.svg" alt=""/>
+							<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta3.svg" alt=""/>
 						</div>
 						<div>
 							<input type="tel" name="" placeholder="Telefono" maxlength="15" pattern="[0-9]{3}-[0-9]{8}"/>
-							<h:graphicImage library="img" name="alumno/planetas/planeta4.svg" alt=""/>
+							<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta4.svg" alt=""/>
 						</div>
 						<div>
 							<div>Free trial!</div>
@@ -335,7 +335,7 @@
 		<section  id="seccion4">
 			<div>
 				<div>
-					<h:graphicImage library="img" name="landing/squadron.svg" alt=""/>
+					<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg" alt=""/>
 				</div>
 				<p>
 					Today’s Students learn best when they are interested in the topic. So, why don’t we give them real materials that they usually watch for fun?
@@ -347,28 +347,28 @@
 			</div>
 			<div>
 				<div>
-					<h:graphicImage library="img" name="/mounstro/whose.svg" alt=""/>
+					<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whose.svg" alt=""/>
 				</div>
 				<div>
-					<h:graphicImage library="img" name="/mounstro/who.svg" alt=""/>
+					<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/who.svg" alt=""/>
 				</div>
 				<div>
-					<h:graphicImage library="img" name="/mounstro/whom.svg" alt=""/>
+					<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whom.svg" alt=""/>
 				</div>
 			</div>
 		</section>
 		<footer>
 			<div>
-			<h:graphicImage library="img" name="landing/squadron.svg"/>
+			<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg" alt=""/>
 			</div>
 <!--			<h5>esquadron</h5>-->
 		</footer>
 	</div>
 <!--	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>-->
-	<h:outputScript library="js" name="landing/landing.js"/>
-	<h:outputScript library="js" name="TweenMax.min.js"/>
-	<h:outputScript library="js" name="landing/animacion-espacio.js"/>
-    <h:outputScript library="js" name="smtp.js"/>
-	<h:outputScript library="js" name="email.js"/>
+	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/landing.js"/>
+	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/TweenMax.min.js"/>
+	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/animacion-espacio.js"/>
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>
+	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>
 </h:body>
 </html>
